--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
   --background: rgba(47, 48, 58, 0.4);
   --iconcolor: #afb1b8;
   --footericon: rgba(255, 255, 255, 0.1);
+  --transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Global styles used throughout whole website */
@@ -89,7 +90,7 @@ padding-bottom: 94px;
   letter-spacing: 0.03em;
 }
 .blue-text {
-  color: var(--blue)
+  color: var(--blue);
 }
 .nav-list {
   display: flex;
@@ -108,9 +109,25 @@ padding-bottom: 94px;
   margin-left: auto;
 }
 .link-style {
+  line-height: 1.14;
+  letter-spacing: 0.02em;
   color: var(--notblack);
   font-weight: 500;
+  transition: 250ms color var(--transition);
 }
+.current-link::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--blue);
+  transform: translateY(28px);
+  border-radius: 2px;
+  pointer-events: none;
+}
+
 .contact-link-style {
   color: var(--grey);
   font-weight: 500;
@@ -217,6 +234,25 @@ color: var(--iconcolor);
   margin: 0;
   justify-content: center;
 }
+
+.service-item {
+position: relative;
+}
+.img-label {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  width: 100%;
+  font-weight: 700;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 27px 0;
+  color: var(--white);
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
 /* Our team section */
 .our-team-background {
   background-color: var(--notwhite);
@@ -277,6 +313,7 @@ color: var(--iconcolor);
   border-radius: 50%;
   fill: var(--iconcolor);
   background-color: var(--white);
+  transition: 250ms fill var(--transition), 250ms background-color var(--transition);
 }
 
 .team-social-link:hover,
@@ -307,6 +344,7 @@ color: var(--iconcolor);
   border: 1px solid var(--iconcolor);
   fill: var(--iconcolor);
   border-radius: 4px;
+  transition: 250ms fill var(--transition), 250ms border-color var(--transition);
 }
 .clients-link:hover,
 .clients-link:focus {
@@ -338,6 +376,9 @@ list-style: none;
   border-radius: 3px;
   padding: 6px 22px;
   font-family: "Roboto";
+  transition: 250ms background-color var(--transition), 250ms color var(--transition),
+    250ms box-shadow var(--transition);
+
 }
 .filter-button:focus,
 .filter-button:hover {
@@ -444,4 +485,54 @@ list-style: none;
   border-radius: 50%;
   background-color: var(--footericon);
   fill: var(--white);
+}
+/* modal window */
+
+.backdrop {
+  display: flex;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.2);
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  transition: visibility 250ms var(--transition), opacity 250ms var(--transition);
+}
+
+.modal-box {
+  position: relative;
+  width: 528px;
+  height: 581px;
+  background-color: var(--white);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  margin: auto;
+  transition: transform 250ms var(--transition);
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.is-hidden .modal-box {
+  transform: scale(0);
+}
+
+.btn-modal-close {
+  width: 30px;
+  height: 30px;
+  background-color: var(--white);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  cursor: pointer;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
 }
