--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
   --productborder: #eeeeee;
   --background: rgba(47, 48, 58, 0.4);
   --iconcolor: #afb1b8;
+  --btn-shadow: rgba(0, 0, 0, 0.15);
   --footericon: rgba(255, 255, 255, 0.1);
   --transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -179,6 +180,7 @@ color: var(--iconcolor);
 }
 .order-service-button {
   background-color: var(--blue);
+  box-shadow: 0px 4px 4px var(--btn-shadow);
   border-style: none;
   border-radius: 4px;
   cursor: pointer;
