--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,7 @@ color: var(--iconcolor);
   line-height: 1.364;
   letter-spacing: 0.06em;
   max-width: 696px;
+  margin: 0 auto;
 }
 .order-service-button {
   background-color: var(--blue);
@@ -184,12 +185,14 @@ color: var(--iconcolor);
   border-style: none;
   border-radius: 4px;
   cursor: pointer;
+  font-family: "Roboto";
   color: var(--white);
   width: 200px;
   height: 50px;
   font-weight: 700;
   font-size: 16px;
-  font-family: "Roboto"
+  text-align: center;
+  align-items: center;
 }
 /* Our speciality section */
 .our-speciality {
@@ -504,7 +507,7 @@ list-style: none;
 }
 
 .modal-box {
-  position: absolute;
+  position: relative;
   width: 528px;
   height: 581px;
   background-color: var(--white);
