--- a/css/styles.css
+++ b/css/styles.css
@@ -28,11 +28,6 @@ body {
   padding: 0;
   background-color: #fff;
 }
-/* .wrapper {
-  background-color: var(--white);
-  width: 1600px;
-  margin: 0 auto;
-} */
 .container {
   width: 1200px; 
   padding: 0 15px; 
@@ -42,6 +37,8 @@ body {
 padding-top: 94px;
 padding-bottom: 94px;
 }
+img {display: block}
+
 .footer-links:hover, 
 .footer-links:focus, 
 .link-style:focus, 
@@ -80,7 +77,6 @@ padding-bottom: 94px;
   flex-direction: row;
   padding: 25px 0 24px 0;
   display: flex;
-  /* border-bottom: 1px solid var(--lightcream); */
 }
 .logo-style {
   font-family: "Raleway";
@@ -161,7 +157,6 @@ color: var(--iconcolor);
   color: var(--white);
   max-width: 1600px;
   margin: 0 auto;
-  /* background-position: center; */
   display: flex;
   gap: 30px;
   flex-direction: column;
@@ -230,6 +225,7 @@ color: var(--iconcolor);
   align-items: center;
   flex-direction: column;
   padding-top: 0;
+  margin: 0;
 }
 .our-services-list {
   display: flex;
@@ -244,6 +240,7 @@ color: var(--iconcolor);
 position: relative;
 }
 .img-label {
+  display: block;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -397,7 +394,6 @@ list-style: none;
   display: flex;
   gap: 30px;
   flex-wrap: wrap;
-
   list-style: none;
   align-items: center;
   justify-content: center;
@@ -406,10 +402,35 @@ list-style: none;
   flex-basis: calc((100% - 90px) / 4);
   margin: 0;
   display: block;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+  box-shadow: 0px 3x 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   cursor: pointer;
+  /* transition: 250ms box-shadow var(--transition); */
+  /* position: relative;
+  width: 370px; */
 }
+
+.portfolio-label {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 370px;
+  background: rgba(33, 150, 243, 0.9);
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--white);
+  padding: 49px 45px 49px 24px;
+  transform: translateY(100%);
+  transition: 250ms transform var(--transition);
+}
+/* .product.card:hover .portfolio-text {
+  transform: translateY(0);
+} */
+
 .product-card-header {
   color: var(--darkgrey);
   font-size: 18px;
