--- a/css/styles.css
+++ b/css/styles.css
@@ -240,7 +240,7 @@ color: var(--iconcolor);
 position: relative;
 }
 .img-label {
-  display: block;
+  /* display: block; */
   position: absolute;
   bottom: 0;
   left: 0;
