--- a/css/styles.css
+++ b/css/styles.css
@@ -398,16 +398,18 @@ list-style: none;
   align-items: center;
   justify-content: center;
 }
-.product-card:hover {
+.product-card {
+  width: 370px;
+  background-color: var(--white);
   flex-basis: calc((100% - 90px) / 4);
   margin: 0;
-  display: block;
-  box-shadow: 0px 3x 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+   border: 1px solid var(--productborder);
+  transition: 250ms box-shadow var(--transition);
+}
+.product-card:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
-  /* transition: 250ms box-shadow var(--transition); */
-  /* position: relative;
-  width: 370px; */
 }
 
 .portfolio-label {
@@ -427,9 +429,9 @@ list-style: none;
   transform: translateY(100%);
   transition: 250ms transform var(--transition);
 }
-/* .product.card:hover .portfolio-text {
+.product.card:hover .portfolio-text {
   transform: translateY(0);
-} */
+}
 
 .product-card-header {
   color: var(--darkgrey);
@@ -472,6 +474,7 @@ list-style: none;
 }
 .footer-links {
   color: var(--footerlinks);
+  transition: 250ms color var(--transition-fn);
 }
 .footer-container {
   flex-direction: row;
