--- a/css/styles.css
+++ b/css/styles.css
@@ -366,7 +366,7 @@ list-style: none;
   justify-content: center;
   gap: 8px;
   list-style: none;
-  margin-bottom: 50px
+  margin-bottom: 50px;
   }
 .filter-button {
   background-color: var(--notwhite);
