--- a/css/styles.css
+++ b/css/styles.css
@@ -429,7 +429,7 @@ list-style: none;
   transform: translateY(100%);
   transition: 250ms transform var(--transition);
 }
-.product.card:hover .portfolio-text {
+.product-card:hover .portfolio-text {
   transform: translateY(0);
 }
 
