--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,7 @@ p {
 .contact-link-style {
   color: var(--grey);
   font-weight: 500;
+  transition: 250ms color var(--transition);
 }
 .link-no-underline {
   text-decoration: none;
@@ -143,6 +144,7 @@ fill: var(--grey);
 display: flex;
 align-items: center;
 justify-content: center;
+transition: 250ms fill var(--transition);
 }
 .symbols-header:hover,
 .symbols-header:focus {
